tests/roscpp/routing/iptables.conf
# Generated by iptables-save v1.4.21 on Sat Sep 19 15:37:50 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 10.1.1.4/32 -j DNAT --to-destination 192.168.122.182
-A PREROUTING -d 10.1.1.3/32 -j DNAT --to-destination 192.168.122.209
-A PREROUTING -d 10.1.1.2/32 -j DNAT --to-destination 192.168.122.143
-A PREROUTING -d 10.1.1.1/32 -j DNAT --to-destination 192.168.122.3
-A POSTROUTING -s 192.168.122.182/32 -j SNAT --to-source 10.1.1.4
-A POSTROUTING -s 192.168.122.209/32 -j SNAT --to-source 10.1.1.3
-A POSTROUTING -s 192.168.122.143/32 -j SNAT --to-source 10.1.1.2
-A POSTROUTING -s 192.168.122.3/32 -j SNAT --to-source 10.1.1.1
COMMIT
# Completed on Sat Sep 19 15:37:50 2015
